<?xml version="1.0"?>
<package format="3">
  <name>rover_autonomous</name>
  <version>1.0.0</version>
  <description>Package de navigation autonome pour rover terrestre</description>
  <maintainer email="tom.compagnon@ensea.fr">Tom Compagnon</maintainer>
  <license>Apache 2.0</license>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>nlohmann_json</depend>
  <depend>gps_msgs</depend>
  <depend>sensor_msgs</depend>


  <build_depend>ament_cmake</build_depend>
  <build_depend>rosidl_default_generators</build_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>