<?xml version="1.0"?>
<package format="3">
  <name>robot_driver</name>
  <version>0.1.0</version>
  <description>ROS2 driver for robot motor control and PPM decoding</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache 2.0</license>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>pigpiod_if2</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>
</package>
