<?xml version="1.0"?>
<package format="3">
  <name>rover_control</name>
  <version>0.1.0</version>
  <description>ROS2 driver for robot motor control and PWM decoding</description>

  <maintainer email="tom.compagnon@ensea.fr">Tom</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>libserial</depend>
  <depend>python3-gpiozero</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
