<?xml version="1.0"?>
<package format="3">
  <name>rover_mavlink</name>
  <version>0.1.0</version>
  <description>Bridge between serial radio and QGroundControl</description>
  <maintainer email="tom.compagnon@ensea.fr">Tom Compagnon</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>

<export>
  <build_type>ament_cmake</build_type>
</export>

</package>